Update Tests connection string

--- a/DataExchangeMVC.Tests/App.config
+++ b/DataExchangeMVC.Tests/App.config
@@ -7,7 +7,7 @@
   <appSettings></appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=DataExchangeMVC;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="DataExchangeDBContext" connectionString="Data Source=.;Initial Catalog=DataExchangeMVC;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DataExchangeDBContext" connectionString="Data Source=.;Initial Catalog=DataExchangeMVC;User ID=admin;Password=admin" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
