--- a/DataExchangeMVC.Tests/DataExchangeMVC.Tests.csproj
+++ b/DataExchangeMVC.Tests/DataExchangeMVC.Tests.csproj
@@ -122,8 +122,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\PersonControllerTest.cs" />
-    <Compile Include="Controllers\VehicleControllerTest.cs" />
+    <Compile Include="Controllers\LogsControllerTest.cs" />
+    <Compile Include="Controllers\PersonsControllerTest.cs" />
+    <Compile Include="Controllers\VehiclesControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
