--- a/DataExchangeMVC/Web.config
+++ b/DataExchangeMVC/Web.config
@@ -19,6 +19,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="LoggingLevel" value="3"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
