--- a/DataExchangeMVC/Web.config
+++ b/DataExchangeMVC/Web.config
@@ -26,7 +26,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <customErrors mode="On" />
+    <customErrors mode="Off" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
