--- a/DataExchangeMVC.Tests/DataExchangeMVC.Tests.csproj
+++ b/DataExchangeMVC.Tests/DataExchangeMVC.Tests.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthenticationSvcTCPImplTest.cs" />
+    <Compile Include="AuthenticationSvcWCFImplTest.cs" />
     <Compile Include="Controllers\LogsControllerTest.cs" />
     <Compile Include="Controllers\PersonsControllerTest.cs" />
     <Compile Include="Controllers\VehiclesControllerTest.cs" />
