--- a/DataExchangeMVC/DataExchangeMVC.csproj
+++ b/DataExchangeMVC/DataExchangeMVC.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -172,6 +174,11 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\AuthorizeAttribute.cs" />
     <Compile Include="Factory.cs" />
+    <Compile Include="Service References\WCFAuthenticationSvcReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Services\Implementations\AuthenticationSvcTCPImpl.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -190,6 +197,7 @@
     <Compile Include="Models\Vehicle.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Implementations\AuthenticationSvcWCFImpl.cs" />
     <Compile Include="Services\Interfaces\IAuthenticationSvc.cs" />
     <Compile Include="Services\Interfaces\IService.cs" />
     <Compile Include="SignalR.Sample\Stock.cs" />
@@ -279,6 +287,16 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <None Include="Service References\WCFAuthenticationSvcReference\DataExchangeMVC.WCFAuthenticationSvcReference.CompositeType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\WCFAuthenticationSvcReference\item.disco" />
+    <None Include="Service References\WCFAuthenticationSvcReference\configuration91.svcinfo" />
+    <None Include="Service References\WCFAuthenticationSvcReference\configuration.svcinfo" />
+    <None Include="Service References\WCFAuthenticationSvcReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="SignalR.Sample\SignalR.StockTicker.js" />
     <Content Include="SignalR.Sample\StockTicker.css" />
     <Content Include="SignalR.Sample\StockTicker.html" />
@@ -324,6 +342,16 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <None Include="Service References\WCFAuthenticationSvcReference\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCFAuthenticationSvcReference\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCFAuthenticationSvcReference\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCFAuthenticationSvcReference\WCFAuthenticationSvc.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -387,6 +415,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Account\NotAuthorized.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\WCFAuthenticationSvcReference\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
