--- a/DataExchangeMVC/Web.config
+++ b/DataExchangeMVC/Web.config
@@ -21,7 +21,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LoggingLevel" value="3" />
     <add key="UseAuthenticationService" value="false" />
-    <add key="IAuthenticationSvc" value="DataExchangeMVC.Services.AuthenticationSvcTCPImpl" />
+    <add key="IAuthenticationSvc" value="DataExchangeMVC.Services.Implementations.AuthenticationSvcWCFImpl" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -88,4 +88,36 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IWCFAuthenticationSvc" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="Message">
+            <transport clientCredentialType="Windows" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="Windows" negotiateServiceCredential="true"
+              algorithmSuite="Default" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8091/WCFAuthenticationService/WCFAuthenticationSvc/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IWCFAuthenticationSvc"
+        contract="WCFAuthenticationSvcReference.IWCFAuthenticationSvc"
+        name="WSHttpBinding_IWCFAuthenticationSvc">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
