--- a/DataExchangeMVC/Web.config
+++ b/DataExchangeMVC/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DataExchangeMVC.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=DataExchangeMVC;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
@@ -20,8 +23,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LoggingLevel" value="3" />
-    <add key="UseAuthenticationService" value="false" />
-    <add key="IAuthenticationSvc" value="DataExchangeMVC.Services.Implementations.AuthenticationSvcWCFImpl" />
+    <add key="UseAuthenticationService" value="true" />
+    <add key="IAuthenticationSvc" value="DataExchangeMVC.Services.Implementations.AuthenticationSvcWSImpl" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -120,4 +123,12 @@
       </endpoint>
     </client>
   </system.serviceModel>
+  <applicationSettings>
+    <DataExchangeMVC.Properties.Settings>
+      <setting name="DataExchangeMVC_AuthenticationWSReference_Service"
+        serializeAs="String">
+        <value>http://localhost:2926/AuthenticationWebService/Service.asmx</value>
+      </setting>
+    </DataExchangeMVC.Properties.Settings>
+  </applicationSettings>
 </configuration>
